--- a/content/LucasBottcher/microbial_control.ipynb
+++ b/content/LucasBottcher/microbial_control.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "This notebook demonstrates how neural ordinary differential equations (ODEs) can be used to model and control microbial populations, with a focus on treating *C. difficile* infections while minimizing antibiotic use.\n",
     "\n",
-    "The relevant, foundational methodological papers are:\n",
-    "\n",
-    "- Böttcher, L., Antulov-Fantulin, N. and Asikis, T., 2022. [AI Pontryagin or how artificial neural networks learn to control dynamical systems](https://www.nature.com/articles/s41467-021-27590-0). Nature Communications, 13(1), p.333.\n",
+    "The relevant method papers are:\n",
     "\n",
     "- Asikis, T., Böttcher, L. and Antulov-Fantulin, N., 2022. [Neural ordinary differential equation control of dynamics on graphs](https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.4.013221). Physical Review Research, 4(1), p.013221.\n",
+    "\n",
+    "- Böttcher, L., Antulov-Fantulin, N. and Asikis, T., 2022. [AI Pontryagin or how artificial neural networks learn to control dynamical systems](https://www.nature.com/articles/s41467-021-27590-0). Nature Communications, 13(1), p.333.\n",
     "\n",
     "- Böttcher, L. and Asikis, T., 2022. [Near-optimal control of dynamical systems with neural ordinary differential equations](https://iopscience.iop.org/article/10.1088/2632-2153/ac92c3/meta). Machine Learning: Science and Technology, 3(4), p.045004.\n",
     "\n",
@@ -101,7 +101,7 @@
     "Initial conditions and parameters are based on experimental data.\n",
     "\n",
     "- Stein, R.R., Bucci, V., Toussaint, N.C., Buffie, C.G., Rätsch, G., Pamer, E.G., Sander, C. and Xavier, J.B., 2013. [Ecological modeling from time-series inference: insight into dynamics and stability of intestinal microbiota](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003388). PLoS Computational Biology, 9(12), p.e1003388.\n",
-    "- \n",
+    "  \n",
     "- Jones, E.W. and Carlson, J.M., 2018. [In silico analysis of antibiotic-induced Clostridium difficile infection: Remediation techniques and biological adaptations](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006001). PLoS Computational Biology, 14(2), p.e1006001."
    ]
   },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fb613275-9687-43f8-baa8-2a958c0cb483",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "faedc867-11fa-466d-bc15-149d68109a51",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "model-initialization",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "48f1eec1-d63d-4d68-9110-dc700444fe84",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "training-loop",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "control-signal-plot",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "stacked-trajectories",
    "metadata": {},
    "outputs": [
