--- a/content/DanielGarza/notebooks/test_install.ipynb
+++ b/content/DanielGarza/notebooks/test_install.ipynb
@@ -21,7 +21,9 @@
    "source": [
     "%cd ..\n",
     "from kinetic_model.visualize import GraphSpecBuilder, CytoscapeExporter\n",
-    "import json"
+    "import json\n",
+    "import plotly.io as pio\n",
+    "pio.renders.default = \"notebook_connected\""
    ]
   },
   {
@@ -44,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Load the model\n",
-    "with open('DanielGarza/modelTemplates/kombucha.json', 'r') as f:\n",
+    "with open('modelTemplates/kombucha.json', 'r') as f:\n",
     "    model = json.load(f)\n",
     "\n",
     "# Build the graph specification\n",
@@ -92,9 +94,9 @@
     "\n",
     "def main():\n",
     "    print(\"Loading model...\")\n",
-    "    model = ModelFromJson(\"/content/AiSchool/content/DanielGarza/modelTemplates/kombucha_refined.json\")\n",
+    "    model = ModelFromJson(\"modelTemplates/kombucha_refined.json\")\n",
     "\n",
-    "    model_feed = ModelFromJson(\"/content/AiSchool/content/DanielGarza/modelTemplates/kombucha_refined.json\")\n",
+    "    model_feed = ModelFromJson(\"modelTemplates/kombucha_refined.json\")\n",
     "\n",
     "    # Optional tweaks:\n",
     "\n",
