--- a/content/DanielGarza/notebooks/test_install.ipynb
+++ b/content/DanielGarza/notebooks/test_install.ipynb
@@ -23,7 +23,7 @@
     "from kinetic_model.visualize import GraphSpecBuilder, CytoscapeExporter\n",
     "import json\n",
     "import plotly.io as pio\n",
-    "pio.renders.default = \"notebook_connected\""
+    "pio.renderers.default = \"notebook_connected\""
    ]
   },
   {
