--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "#import packages for the model and visualization\n",
-    "from kinetic_model.metabolite import Metabolite, Metabolome\n",
+    "from kinetic_model import Metabolite, Metabolome\n",
     "from kinetic_model.visualize import GraphSpecBuilder, CytoscapeExporter\n",
     "import json\n",
     "#to make sure plotly renders in the notebook\n",
@@ -64,7 +64,8 @@
     "\n",
     "#create metabolites\n",
     "glucose = Metabolite(name = \"glucose\", concentration = 5.0, formula ={'C': 6, 'H': 12, 'O': 6}, color = '#ff0000')\n",
-    "acetate = Metabolite(name = \"acetate\", concentration = 0.0, formula ={'C': 2, 'H': 4, 'O': 3}, color = '#003eff')\n"
+    "acetate = Metabolite(name = \"acetate\", concentration = 0.0, formula ={'C': 2, 'H': 4, 'O': 3}, color = '#003eff')\n",
+    "co2 = Metabolite(name = \"co2\", concentration = 0.0, formula ={'C': 1, 'O': 2}, color = '##00B8FF')"
    ]
   },
   {
