--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -65,7 +65,7 @@
     "#create metabolites\n",
     "glucose = Metabolite(name = \"glucose\", concentration = 5.0, formula ={'C': 6, 'H': 12, 'O': 6}, color = '#ff0000')\n",
     "acetate = Metabolite(name = \"acetate\", concentration = 0.0, formula ={'C': 2, 'H': 4, 'O': 3}, color = '#003eff')\n",
-    "co2 = Metabolite(name = \"co2\", concentration = 0.0, formula ={'C': 1, 'O': 2}, color = '##00B8FF')"
+    "co2 = Metabolite(name = \"co2\", concentration = 0.0, formula ={'C': 1, 'O': 2}, color = '#00B8FF')"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "id": "bcf8d75c",
    "metadata": {},
    "source": [
-    "We can also visualize the model components in Cytoscape"
+    "We can also visualize the model components with Cytoscape"
    ]
   },
   {
@@ -149,12 +149,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80d81c7c",
+   "metadata": {},
+   "source": [
+    "#### **Fedding terms**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2a49a1",
+   "metadata": {},
+   "source": [
+    "`Feeding terms ` encode the consumption of metabolites by microbial subpopulations and the release of byproducts. They are created as independent objects and will later be associated to subpopulations. \n",
+    "\n",
+    "If more than one metabolite goes into a feeding term, then it's an `AND` relation:\n",
+    "\n",
+    "\n",
+    "```css\n",
+    "[metabolite A] + [metabolite C] ---> [metabolite B]\n",
+    "```\n",
+    "\n",
+    "\n",
+    "If a subpopulations has more than one feeding term, then it's an `OR` relation:\n",
+    "\n",
+    "```css\n",
+    "[metabolite A] ---> [metabolite B] + [metabolite C]\n",
+    "\n",
+    "[metabolite D] ---> metabolite E]\n",
+    "```\n",
+    "\n",
+    "`Boost` is the  `AND` plus an `OR`. Alternative subpopulations are needed to encode sequential feeding (`XOR`).\n",
+    "\n",
+    "\n",
+    "The *E. coli* example has two feeding terms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2dc2baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Basic usage with simple metabolome:\n",
+    "from kinetic_model import FeedingTerm\n",
+    "# Create feeding term: consumes glucose, produces lactate\n",
+    "feeding_term_1 = FeedingTerm(\n",
+    "    id=\"glucose_to_acetate\",\n",
+    "    metDict={\"glucose\": [1.0, 1.0], \"acetate\": [1.0, 0.0]}, \n",
+    "    metabolome=metabolome)\n",
+    "\n",
+    "feeding_term_2 = FeedingTerm(\n",
+    "    id=\"acetate_to_co2\",\n",
+    "    metDict={\"acetate\": [1.0, 1.0], \"co2\": [1.0, 0.0]},\n",
+    "    metabolome=metabolome\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "718bdcee",
+   "metadata": {},
+   "source": [
+    "We can do some basic calculations of the metabolic rates given the currenct metabolite concentrations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0e052c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get current concentrations\n",
+    "concentrations = metabolome.get_concentration()\n",
+    "# Calculate growth and metabolism rates\n",
+    "growth_contribution = feeding_term_1.intrinsicGrowth(concentrations)\n",
+    "metabolism_rates = feeding_term_1.intrinsicMetabolism(concentrations)\n",
+    "print(f\"growth_contribution ft 1: {growth_contribution:.3f}\")\n",
+    "print(f\"Metabolism rates ft 1: {metabolism_rates}\")\n",
+    "\n",
+    "\n",
+    "# Get current concentrations\n",
+    "concentrations = metabolome.get_concentration()\n",
+    "# Calculate growth and metabolism rates\n",
+    "growth_contribution = feeding_term_2.intrinsicGrowth(concentrations)\n",
+    "metabolism_rates = feeding_term_2.intrinsicMetabolism(concentrations)\n",
+    "print(f\"growth_contribution ft 2: {growth_contribution:.3f}\")\n",
+    "print(f\"Metabolism rates ft 2: {metabolism_rates}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bb973eb",
+   "metadata": {},
+   "source": [
+    "let's visualize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b38bb698",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = json.loads(feeding_term_1.to_json(full_model=True))\n",
+    "\n",
+    "# Build the graph specification\n",
+    "builder = GraphSpecBuilder()\n",
+    "graph_spec = builder.build_from_json(model)\n",
+    "\n",
+    "# Export to Cytoscape\n",
+    "exporter = CytoscapeExporter()\n",
+    "cytoscape_data = exporter.export(graph_spec, layout=\"nice\", show_edge_labels=True)\n",
+    "\n",
+    "# Display the visualization\n",
+    "from ipycytoscape import CytoscapeWidget\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "# Create the viewer\n",
+    "viewer = CytoscapeWidget()\n",
+    "viewer.graph.add_graph_from_json(cytoscape_data['elements'])\n",
+    "viewer.set_style(cytoscape_data['style'])\n",
+    "viewer.set_layout(name=\"preset\")\n",
+    "\n",
+    "# Display\n",
+    "display(viewer)"
+   ]
   }
  ],
  "metadata": {
