--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -197,12 +197,12 @@
     "# Create feeding term: consumes glucose, produces lactate\n",
     "feeding_term_1 = FeedingTerm(\n",
     "    id=\"glucose_to_acetate\",\n",
-    "    metDict={\"glucose\": [1.0, 1.0], \"acetate\": [1.0, 0.0]}, \n",
+    "    metDict={\"glucose\": [1.0, 1.0], \"acetate\": [-1.0, 0.0]}, \n",
     "    metabolome=metabolome)\n",
     "\n",
     "feeding_term_2 = FeedingTerm(\n",
     "    id=\"acetate_to_co2\",\n",
-    "    metDict={\"acetate\": [1.0, 1.0], \"co2\": [1.0, 0.0]},\n",
+    "    metDict={\"acetate\": [1.0, 1.0], \"co2\": [-1.0, 0.0]},\n",
     "    metabolome=metabolome\n",
     ")\n"
    ]
@@ -245,7 +245,7 @@
    "id": "9bb973eb",
    "metadata": {},
    "source": [
-    "let's visualize"
+    "let's visualize the glucose term."
    ]
   },
   {
@@ -277,6 +277,55 @@
     "\n",
     "# Display\n",
     "display(viewer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bd2920",
+   "metadata": {},
+   "source": [
+    "#### **Subpopulations**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "537c140f",
+   "metadata": {},
+   "source": [
+    "Subpopulations are represent a phenotype (in our model, a feeding term) and a state (*e.g.*, active or inactive)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "484910fc",
+   "metadata": {},
+   "source": [
+    "from kinetic_model import Subpopulation\n",
+    "\n",
+    "\n",
+    "# Create subpopulation\n",
+    "subpop = Subpopulation(\n",
+    "    name=\"active_ecoli_1\",\n",
+    "    count=1.0,\n",
+    "    species=\"E. coli\",\n",
+    "    mumax=0.5,\n",
+    "    feedingTerms=feeding_term_1,\n",
+    "    pHopt=7.0,\n",
+    "    pH_sensitivity_left=1.0,\n",
+    "    pH_sensitivity_right=1.0,\n",
+    "    Topt=37.0,\n",
+    "    tempSensitivity_left=1.0,\n",
+    "    tempSensitivity_right=1.0\n",
+    "    )\n",
+    "# Access properties\n",
+    "print(f\"Growth rate: {subpop.mumax}\")\n",
+    "print(f\"pH sensitivity at pH 7.0: {subpop.pHSensitivity(7.0):.3f}\")\n",
+    "print(f\"Temperature sensitivity at 37°C: {subpop.tempSensitivity(37.0):.3f}\")\n",
+    "\n",
+    "# Calculate growth and metabolism with concentration vector\n",
+    "growth_rate = subpop.intrinsicGrowth(concentrations)\n",
+    "metabolism_rates = subpop.intrinsicMetabolism(concentrations)\n",
+    "\n"
    ]
   }
  ],
