--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -311,7 +311,7 @@
     "    count=1.0,\n",
     "    species=\"E. coli\",\n",
     "    mumax=0.5,\n",
-    "    feedingTerms=feeding_term_1,\n",
+    "    feedingTerms=[feeding_term_1],\n",
     "    pHopt=7.0,\n",
     "    pH_sensitivity_left=1.0,\n",
     "    pH_sensitivity_right=1.0,\n",
