--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -306,8 +306,8 @@
     "\n",
     "\n",
     "# Create subpopulation\n",
-    "subpop = Subpopulation(\n",
-    "    name=\"active_ecoli_1\",\n",
+    "subpop_1 = Subpopulation(\n",
+    "    name=\"glucose_ecoli\",\n",
     "    count=1.0,\n",
     "    species=\"E. coli\",\n",
     "    mumax=0.5,\n",
@@ -319,6 +319,34 @@
     "    tempSensitivity_left=1.0,\n",
     "    tempSensitivity_right=1.0\n",
     "    )\n",
+    "\n",
+    "\n",
+    "subpop_2 = Subpopulation(\n",
+    "    name=\"acetate_ecoli\",\n",
+    "    count=1.0,\n",
+    "    species=\"E. coli\",\n",
+    "    mumax=0.3,\n",
+    "    feedingTerms=[feeding_term_2],\n",
+    "    pHopt=7.0,\n",
+    "    pH_sensitivity_left=1.0,\n",
+    "    pH_sensitivity_right=1.0,\n",
+    "    Topt=37.0,\n",
+    "    tempSensitivity_left=1.0,\n",
+    "    tempSensitivity_right=1.0\n",
+    "    )\n",
+    "\n",
+    "subpop_3 = Subpopulation(\n",
+    "    name=\"inactive_ecoli\",\n",
+    "    count=1.0,\n",
+    "    species=\"E. coli\",\n",
+    "    mumax=0.0,\n",
+    "    state=\"inactive\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Access properties\n",
     "print(f\"Growth rate: {subpop.mumax}\")\n",
     "print(f\"pH sensitivity at pH 7.0: {subpop.pHSensitivity(7.0):.3f}\")\n",
