--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -335,14 +335,20 @@
     "    tempSensitivity_right=1.0\n",
     "    )\n",
     "\n",
-    "subpop_3 = Subpopulation(\n",
+    "subpop_2 = Subpopulation(\n",
     "    name=\"inactive_ecoli\",\n",
     "    count=1.0,\n",
     "    species=\"E. coli\",\n",
     "    mumax=0.0,\n",
-    "    state=\"inactive\"\n",
+    "    feedingTerms=[],\n",
+    "    state=\"inactive\",\n",
+    "    pHopt=7.0,\n",
+    "    pH_sensitivity_left=1.0,\n",
+    "    pH_sensitivity_right=1.0,\n",
+    "    Topt=37.0,\n",
+    "    tempSensitivity_left=1.0,\n",
+    "    tempSensitivity_right=1.0\n",
     "    )\n",
-    "\n",
     "\n",
     "\n",
     "\n",
