--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -354,13 +354,13 @@
     "\n",
     "\n",
     "# Access properties\n",
-    "print(f\"Growth rate: {subpop.mumax}\")\n",
-    "print(f\"pH sensitivity at pH 7.0: {subpop.pHSensitivity(7.0):.3f}\")\n",
-    "print(f\"Temperature sensitivity at 37°C: {subpop.tempSensitivity(37.0):.3f}\")\n",
+    "print(f\"Growth rate: {subpop_1.mumax}\")\n",
+    "print(f\"pH sensitivity at pH 7.0: {subpop_1.pHSensitivity(7.0):.3f}\")\n",
+    "print(f\"Temperature sensitivity at 37°C: {subpop_1.tempSensitivity(37.0):.3f}\")\n",
     "\n",
     "# Calculate growth and metabolism with concentration vector\n",
-    "growth_rate = subpop.intrinsicGrowth(concentrations)\n",
-    "metabolism_rates = subpop.intrinsicMetabolism(concentrations)\n",
+    "growth_rate = subpop_1.intrinsicGrowth(concentrations)\n",
+    "metabolism_rates = subpop_1.intrinsicMetabolism(concentrations)\n",
     "\n"
    ]
   },
