--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -13,8 +13,15 @@
    "id": "9b280df2",
    "metadata": {},
    "source": [
-    "The `kinetic model` environment allows us to simulate microbial communities and their environments using ordinary differential equations. To get a better understanding of the model, \n",
-    "We are going to create a simplified example of *E. coli* subpopulations. In our example, there are three subpopulations, two active and one inactive. The active ones feed respectively on glucose releasing acetate (overflow), and on acetate releasing CO2. Both subpopulations can become inactive.\n",
+    "The `kinetic model` environment allows us to simulate microbial communities and their environments using ordinary differential equations. \n",
+    "\n",
+    "To illustrate how it works, we build a simplified examplt with *E. coli* subpopulations. \n",
+    "\n",
+    "In this example, there are three subpopulations: two active and one inactive. \n",
+    "\n",
+    "- **Subpopulation A** consumes glucose and produces acetate (overflow).\n",
+    "\n",
+    "- **Subpopulation B** consumes acetate and produces CO2. Both subpopulations can transition to the inactive state.\n",
     "\n",
     "\n",
     "<div style=\"height:24px;\"></div>\n",
@@ -43,7 +50,7 @@
    "id": "a3edd2dc",
    "metadata": {},
    "source": [
-    "We first create three Metabolite objects for glucose, acetate, and CO2 and group them in a Metabolome.\n"
+    "First, we create three `Metabolite` objects—glucose, acetate, and CO2—and group them in a `Metabolome`.\n"
    ]
   },
   {
@@ -60,6 +67,10 @@
     "#to make sure plotly renders in the notebook\n",
     "import plotly.io as pio\n",
     "pio.renderers.default = \"notebook\"\n",
+    "# Display Cytoscape visualization\n",
+    "from ipycytoscape import CytoscapeWidget\n",
+    "import ipywidgets as widgets\n",
+    "\n",
     "\n",
     "\n",
     "#create metabolites\n",
@@ -112,7 +123,7 @@
    "id": "bcf8d75c",
    "metadata": {},
    "source": [
-    "We can also visualize the model components with Cytoscape"
+    "We can also visualize the model components in Cytoscape"
    ]
   },
   {
@@ -133,10 +144,6 @@
     "# Export to Cytoscape\n",
     "exporter = CytoscapeExporter()\n",
     "cytoscape_data = exporter.export(graph_spec, layout=\"nice\", show_edge_labels=True)\n",
-    "\n",
-    "# Display the visualization\n",
-    "from ipycytoscape import CytoscapeWidget\n",
-    "import ipywidgets as widgets\n",
     "\n",
     "# Create the viewer\n",
     "viewer = CytoscapeWidget()\n",
@@ -161,9 +168,10 @@
    "id": "db2a49a1",
    "metadata": {},
    "source": [
-    "`Feeding terms ` encode the consumption of metabolites by microbial subpopulations and the release of byproducts. They are created as independent objects and will later be associated to subpopulations. \n",
+    "`Feeding term` objects encode how microbial subpopulations consume metabolites and release byproducts. They are defined independently and later linked to subpopulations. \n",
     "\n",
-    "If more than one metabolite goes into a feeding term, then it's an `AND` relation:\n",
+    "\n",
+    "- If the `feeding term` requires more than one input metabolite, the relation is an `AND`:\n",
     "\n",
     "\n",
     "```css\n",
@@ -171,7 +179,7 @@
     "```\n",
     "\n",
     "\n",
-    "If a subpopulations has more than one feeding term, then it's an `OR` relation:\n",
+    "- If a subpopulations has more than one feeding term, the relation is an `OR`:\n",
     "\n",
     "```css\n",
     "[metabolite A] ---> [metabolite B] + [metabolite C]\n",
@@ -179,10 +187,12 @@
     "[metabolite D] ---> metabolite E]\n",
     "```\n",
     "\n",
-    "`Boost` is the  `AND` plus an `OR`. Alternative subpopulations are needed to encode sequential feeding (`XOR`).\n",
+    "- A `Boost` is an  `AND` combined with an `OR`. \n",
+    "\n",
+    "- Sequential (`XOR`) requires alternative subpopulations.\n",
     "\n",
     "\n",
-    "The *E. coli* example has two feeding terms."
+    "In the *E. coli* example, there are two feeding terms."
    ]
   },
   {
@@ -212,7 +222,7 @@
    "id": "718bdcee",
    "metadata": {},
    "source": [
-    "We can do some basic calculations of the metabolic rates given the currenct metabolite concentrations."
+    "We can perform basic calculations of metabolic rates using the current metabolite concentrations defined in the `metabolome` object."
    ]
   },
   {
@@ -227,15 +237,15 @@
     "# Calculate growth and metabolism rates\n",
     "growth_contribution = feeding_term_1.intrinsicGrowth(concentrations)\n",
     "metabolism_rates = feeding_term_1.intrinsicMetabolism(concentrations)\n",
+    "\n",
     "print(f\"growth_contribution ft 1: {growth_contribution:.3f}\")\n",
     "print(f\"Metabolism rates ft 1: {metabolism_rates}\")\n",
     "\n",
     "\n",
-    "# Get current concentrations\n",
-    "concentrations = metabolome.get_concentration()\n",
     "# Calculate growth and metabolism rates\n",
     "growth_contribution = feeding_term_2.intrinsicGrowth(concentrations)\n",
     "metabolism_rates = feeding_term_2.intrinsicMetabolism(concentrations)\n",
+    "\n",
     "print(f\"growth_contribution ft 2: {growth_contribution:.3f}\")\n",
     "print(f\"Metabolism rates ft 2: {metabolism_rates}\")"
    ]
@@ -245,7 +255,7 @@
    "id": "9bb973eb",
    "metadata": {},
    "source": [
-    "let's visualize the glucose term."
+    "Let’s visualize the glucose feeding term."
    ]
   },
   {
@@ -264,10 +274,6 @@
     "# Export to Cytoscape\n",
     "exporter = CytoscapeExporter()\n",
     "cytoscape_data = exporter.export(graph_spec, layout=\"nice\", show_edge_labels=True)\n",
-    "\n",
-    "# Display the visualization\n",
-    "from ipycytoscape import CytoscapeWidget\n",
-    "import ipywidgets as widgets\n",
     "\n",
     "# Create the viewer\n",
     "viewer = CytoscapeWidget()\n",
@@ -292,7 +298,7 @@
    "id": "537c140f",
    "metadata": {},
    "source": [
-    "Subpopulations are represent a phenotype (in our model, a feeding term) and a state (*e.g.*, active or inactive)."
+    "Subpopulations represent microbial phenotypes—defined by their feeding terms—and their state (e.g., active or inactive)"
    ]
   },
   {
@@ -335,7 +341,7 @@
     "    tempSensitivity_right=1.0\n",
     "    )\n",
     "\n",
-    "subpop_2 = Subpopulation(\n",
+    "subpop_3 = Subpopulation(\n",
     "    name=\"inactive_ecoli\",\n",
     "    count=1.0,\n",
     "    species=\"E. coli\",\n",
@@ -366,7 +372,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28148d9d",
+   "metadata": {},
+   "source": [
+    "#### **Bacteria and Microbiomes** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "484910fc",
+   "metadata": {},
+   "source": [
+    "A species is represented by a `Bacteria` object, defined as a collection of subpopulations and the transition terms between them. Transitions depend on the environment and are specified as boolean or threshold functions, each combined with a rate.\n",
+    "\n",
+    "For example, we can define that the glucose-consuming E. coli subpopulation transitions to the acetate-consuming subpopulation when glucose falls below $1 mM$, at a rate of $0.001.$ Conversely, when glucose rises above $1 mM$, the acetate-consuming subpopulation transitions back to glucose consumption at a rate of $0.01$.\n",
+    "\n",
+    "Microbiomes are encoded as collections of species."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc9a3850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kinetic_model import Bacteria\n",
+    "\n",
+    "# Create bacteria with conditional transitions based on resource availability\n",
+    "\n",
+    "bacteria = Bacteria(\n",
+    "    species=\"E. coli\",\n",
+    "    subpopulations={\n",
+    "        \"glucose_consumer\": subpop_1,\n",
+    "        \"acetate_consumer\": subpop_2,\n",
+    "        \"inactive\": subpop_3\n",
+    "        },\n",
+    "    connections={\n",
+    "        \"glucose_consumer\": [[\"acetate_consumer\", \"glucose <1 and acetate > 1\", 0.001], [\"inactive\", \"\", 0.00001]],\n",
+    "        \"acetate_consumer\": [[\"glucose_consumer\", \"glucose > 1 and acetate < 1\", 0.01], [\"inactive\", \"\", 0.0000001]],\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "# Access properties\n",
+    "print(f\"Species: {bacteria.species}\")\n",
+    "print(f\"Subpopulations: {list(bacteria.subpopulations.keys())}\")\n",
+    "print(f\"Connections: {bacteria.connections}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cfff072",
    "metadata": {},
    "source": []
   }
