--- a/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
+++ b/content/DanielGarza/notebooks/maximize_butyrate_gut_synC.ipynb
@@ -401,7 +401,7 @@
     "\n",
     "# Create bacteria with conditional transitions based on resource availability\n",
     "\n",
-    "bacteria = Bacteria(\n",
+    "ecoli = Bacteria(\n",
     "    species=\"E. coli\",\n",
     "    subpopulations={\n",
     "        \"glucose_consumer\": subpop_1,\n",
@@ -417,14 +417,48 @@
     "# Access properties\n",
     "print(f\"Species: {bacteria.species}\")\n",
     "print(f\"Subpopulations: {list(bacteria.subpopulations.keys())}\")\n",
-    "print(f\"Connections: {bacteria.connections}\")\n"
+    "print(f\"Connections: {bacteria.connections}\")\n",
+    "\n",
+    "\n",
+    "# ===== CREATE MICROBIOME =====\n",
+    "microbiome = Microbiome(\"E_coli_monoculture\", {\"E_coli\": ecoli})"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1cfff072",
    "metadata": {},
-   "source": []
+   "source": [
+    "Let’s visualize it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5124c432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get complete model structure directly - no manual structure creation needed!\n",
+    "model = json.loads(microbiome.to_json(full_model=True))\n",
+    "\n",
+    "# Build the graph specification\n",
+    "builder = GraphSpecBuilder()\n",
+    "graph_spec = builder.build_from_json(model)\n",
+    "\n",
+    "# Export to Cytoscape\n",
+    "exporter = CytoscapeExporter()\n",
+    "cytoscape_data = exporter.export(graph_spec, layout=\"nice\", show_edge_labels=True)\n",
+    "\n",
+    "# Create the viewer\n",
+    "viewer = CytoscapeWidget()\n",
+    "viewer.graph.add_graph_from_json(cytoscape_data['elements'])\n",
+    "viewer.set_style(cytoscape_data['style'])\n",
+    "viewer.set_layout(name=\"preset\")\n",
+    "\n",
+    "# Display\n",
+    "display(viewer)"
+   ]
   }
  ],
  "metadata": {
