--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -397,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kinetic_model import Bacteria\n",
+    "from kinetic_model import Bacteria, Microbiome\n",
     "\n",
     "# Create bacteria with conditional transitions based on resource availability\n",
     "\n",
@@ -415,9 +415,9 @@
     "    )\n",
     "\n",
     "# Access properties\n",
-    "print(f\"Species: {bacteria.species}\")\n",
-    "print(f\"Subpopulations: {list(bacteria.subpopulations.keys())}\")\n",
-    "print(f\"Connections: {bacteria.connections}\")\n",
+    "print(f\"Species: {ecoli.species}\")\n",
+    "print(f\"Subpopulations: {list(ecoli.subpopulations.keys())}\")\n",
+    "print(f\"Connections: {ecoli.connections}\")\n",
     "\n",
     "\n",
     "# ===== CREATE MICROBIOME =====\n",
@@ -459,6 +459,129 @@
     "# Display\n",
     "display(viewer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e5b22b",
+   "metadata": {},
+   "source": [
+    "#### **Environment**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cea361b",
+   "metadata": {},
+   "source": [
+    "The `Environment` object encodes the system’s environmental conditions—currently pH, temperature, and stirring.\n",
+    "\n",
+    "- `pH` influences microbial growth through each subpopulation’s pH sensitivity. It can be set as a fixed value or defined as a function of metabolite concentrations.\n",
+    "\n",
+    "- `Temperature` is specified as a fixed value and affects growth according to the temperature sensitivity parameter.\n",
+    "\n",
+    "- `Stirring controls` how evenly cells and metabolites are distributed. In a well-mixed system (stirring = 1), concentrations match their true values exactly. When stirring is zero, observed concentrations are taken as random samples of the true values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a318caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kinetic_model import Environment, pH, Stirring, Temperature\n",
+    "# Create components\n",
+    "ph_obj = pH(metabolome, intercept=7.0, met_dictionary={}) #pH will be fixed at 7\n",
+    "stirring_obj = Stirring(rate=0.8, base_std=0.05)\n",
+    "temp_obj = Temperature(37.0)\n",
+    "\n",
+    "# Create environment\n",
+    "env = Environment(ph_obj, stirring_obj, temp_obj)\n",
+    "# Apply all environmental factors at once\n",
+    "concentrations = metabolome.get_concentration()  # glucose concentration\n",
+    "result = env.apply_all_factors(concentrations)\n",
+    "# Or access individual components\n",
+    "current_ph = env.pH.compute_pH(concentrations)\n",
+    "stirred_value = env.stirring.apply_stirring(10.0)\n",
+    "current_temp = env.temperature.temperature\n",
+    "\n",
+    "\n",
+    "print(f\"pH: {current_ph}\")\n",
+    "print(f\"Stirred value: {stirred_value}\")\n",
+    "print(f\"Temperature: {current_temp}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e738b275",
+   "metadata": {},
+   "source": [
+    "#### **Control Pulse**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e31990d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1211a44d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be7d049a",
+   "metadata": {},
+   "source": [
+    "#### **Reactor**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf5b336",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5775ac67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97a18f05",
+   "metadata": {},
+   "source": [
+    "#### **Simulation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36a97e8a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f647c899",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf3cf4a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
