--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -496,7 +496,7 @@
     "temp_obj = Temperature(37.0)\n",
     "\n",
     "# Create environment\n",
-    "env = Environment(ph_obj, stirring_obj, temp_obj)\n",
+    "environment = Environment(ph_obj, stirring_obj, temp_obj)\n",
     "# Apply all environmental factors at once\n",
     "concentrations = metabolome.get_concentration()  # glucose concentration\n",
     "result = env.apply_all_factors(concentrations)\n",
@@ -523,7 +523,9 @@
    "cell_type": "markdown",
    "id": "6e31990d",
    "metadata": {},
-   "source": []
+   "source": [
+    "The `Pulse` object defines the environmental conditions during a fixed time interval. It specifies what enters or leaves the reactor (metabolites or cells), either as a single event at the start of the interval or continuously throughout it. The `Pulse` also sets the environmental parameters (`pH`, `temperature`, `stirring`) for that period."
+   ]
   },
   {
    "cell_type": "code",
@@ -531,7 +533,18 @@
    "id": "1211a44d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pulse = Pulse(\n",
+    "        t_start=0.0,\n",
+    "        t_end=120.0,   # 120 hours\n",
+    "        n_steps=1000,\n",
+    "        qin=0.0,\n",
+    "        qout=0.0,\n",
+    "        vin=0.0,\n",
+    "        vout=0.0,\n",
+    "        environment=environment\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "markdown",
