--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -499,11 +499,11 @@
     "environment = Environment(ph_obj, stirring_obj, temp_obj)\n",
     "# Apply all environmental factors at once\n",
     "concentrations = metabolome.get_concentration()  # glucose concentration\n",
-    "result = env.apply_all_factors(concentrations)\n",
+    "result = environment.apply_all_factors(concentrations)\n",
     "# Or access individual components\n",
-    "current_ph = env.pH.compute_pH(concentrations)\n",
-    "stirred_value = env.stirring.apply_stirring(10.0)\n",
-    "current_temp = env.temperature.temperature\n",
+    "current_ph = environment.pH.compute_pH(concentrations)\n",
+    "stirred_value = environment.stirring.apply_stirring(10.0)\n",
+    "current_temp = environment.temperature.temperature\n",
     "\n",
     "\n",
     "print(f\"pH: {current_ph}\")\n",
