--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -15,9 +15,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%cd ..\n",
+        "# Setup imports and configuration\n",
         "from pathlib import Path\n",
         "import numpy as np\n",
+        "\n",
+        "# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\n",
+        "import sys\n",
+        "DG_ROOT = Path('..')\n",
+        "SRC_PATH = DG_ROOT / 'src'\n",
+        "if str(SRC_PATH) not in sys.path:\n",
+        "    sys.path.insert(0, str(SRC_PATH))\n",
         "\n",
         "from rl.env import GeneralMicrobiomeEnv\n",
         "from rl.config import TopLevelConfig\n",
@@ -27,6 +34,7 @@
         "# Matplotlib for static plots\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "# Utility to set publication-like style (optional)\n",
         "def apply_pub_style():\n",
         "    plt.rcParams.update({\n",
         "        'figure.dpi': 100,\n",
@@ -52,15 +60,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Configure model, config, and runtime\n",
-        "# Adjust these paths to your environment\n",
+        "# Configure model, config, and runtime (assumes working under content/DanielGarza)\n",
         "MODEL_JSON = DG_ROOT / 'modelTemplates' / 'bh_bt_ri_complete_model_export.json'\n",
-        "POLICY_PATH = DG_ROOT / 'models' / 'mg_rl_general_ppo' / 'butyrate' / 'ppo' / '1' / 'model.zip'  # example; set USE_RANDOM_ACTIONS=True if missing\n",
         "CONFIG_PATH = SRC_PATH / 'rl' / 'examples' / 'configs' / 'butyrate_control.yaml'\n",
+        "# Provide a model path only if you set USE_RANDOM_ACTIONS=False\n",
+        "POLICY_PATH = SRC_PATH / 'rl' / 'examples' / 'models' / 'example_policy.zip'\n",
         "HOURS = 100.0\n",
         "DET = True\n",
         "SEED = 123\n",
-        "USE_RANDOM_ACTIONS = True  # set False to load a trained model\n",
+        "USE_RANDOM_ACTIONS = True  # set False to load a trained model at POLICY_PATH\n",
         "\n",
         "# Load config\n",
         "if CONFIG_PATH is None:\n",
@@ -87,13 +95,16 @@
         "\n",
         "# Load model (optional)\n",
         "model = None\n",
-        "if not USE_RANDOM_ACTIONS and POLICY_PATH.exists():\n",
+        "if not USE_RANDOM_ACTIONS:\n",
         "    from stable_baselines3 import SAC, PPO\n",
-        "    algo = 'ppo'\n",
-        "    if algo == 'sac':\n",
-        "        model = SAC.load(str(POLICY_PATH), device='auto')\n",
-        "    elif algo == 'ppo':\n",
-        "        model = PPO.load(str(POLICY_PATH), device='auto')\n",
+        "    if POLICY_PATH.suffix.lower() == '.zip' and POLICY_PATH.exists():\n",
+        "        # Try PPO first, fallback to SAC\n",
+        "        try:\n",
+        "            model = PPO.load(str(POLICY_PATH), device='auto')\n",
+        "        except Exception:\n",
+        "            model = SAC.load(str(POLICY_PATH), device='auto')\n",
+        "    else:\n",
+        "        raise FileNotFoundError(f\"POLICY_PATH not found: {POLICY_PATH}\")\n",
         "\n",
         "# Collect one rollout worth of data\n",
         "obs, info = env_wrapped.reset(seed=SEED)\n",
