--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -167,18 +167,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 1) Performance plot (single figure)\n",
-        "fig, axes = plt.subplots(3, 1, figsize=(10, 9), sharex=True)\n",
+        "# 1) Performance plot (single figure, no pH)\n",
+        "fig, axes = plt.subplots(2, 1, figsize=(10, 7), sharex=True)\n",
         "axes[0].plot(t, target_vals, color='tab:orange', label='target')\n",
-        "axes[0].set_ylabel('Target [mM]'); axes[0].set_title('Controller Performance'); axes[0].legend(loc='best')\n",
-        "axes[1].plot(t, pH_used, color='tab:blue', label='pH used')\n",
-        "axes[1].set_ylabel('pH [-]'); axes[1].legend(loc='best')\n",
-        "axes[2].plot(t, reward, color='tab:gray', alpha=0.5, label='Reward (step)')\n",
+        "axes[0].set_ylabel('Target [mM]')\n",
+        "axes[0].set_title('Controller Performance')\n",
+        "axes[0].legend(loc='best')\n",
+        "axes[1].plot(t, reward, color='tab:gray', alpha=0.5, label='Reward (step)')\n",
         "ma_w = max(1, len(reward)//100)\n",
         "ma = np.convolve(np.r_[np.full(ma_w-1, reward[0] if reward.size else 0.0), reward], np.ones(ma_w)/ma_w, mode='valid')[:reward.size]\n",
-        "axes[2].plot(t, ma, color='tab:green', label='Reward (moving avg)')\n",
-        "axes[2].set_ylabel('Reward'); axes[-1].set_xlabel('Time [h]'); axes[2].legend(loc='best')\n",
+        "axes[1].plot(t, ma, color='tab:green', label='Reward (moving avg)')\n",
+        "axes[1].set_ylabel('Reward')\n",
+        "axes[-1].set_xlabel('Time [h]')\n",
+        "axes[1].legend(loc='best')\n",
         "fig.tight_layout()\n",
+        "plt.close(fig)\n",
         "fig\n"
       ]
     },
@@ -212,6 +215,7 @@
         "axes[row].plot(t, series['temp'], label='temp [C]', color='tab:red'); axes[row].legend(loc='best'); axes[row].set_ylabel('temp')\n",
         "axes[-1].set_xlabel('Time [h]')\n",
         "fig.tight_layout()\n",
+        "plt.close(fig)\n",
         "fig\n"
       ]
     },
@@ -317,6 +321,7 @@
         "for ax in axes:\n",
         "    ax.set_xlabel('Time [h]')\n",
         "fig.tight_layout()\n",
+        "plt.close(fig)\n",
         "fig\n"
       ]
     }
